objects/Astonous_SM__Recipient_Address_DataSource__mdt.object
<CustomObject>
    <description>Store Recipient Data Source to quickly create Label from Related List. Name of record must be API Name of Object</description>
    <fields>
        <fullName>Astonous_SM__City_Field_API_Name__c</fullName>
        <inlineHelpText>API Name of object field</inlineHelpText>
        <label>City Field API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Company_Field_API_Name__c</fullName>
        <inlineHelpText>API Name of field that store Company Name(Optional)</inlineHelpText>
        <label>Company Field API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Country_Field_API_Name__c</fullName>
        <inlineHelpText>API Name of Field that store Country</inlineHelpText>
        <label>Country Field API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Email_Field_API_Name__c</fullName>
        <inlineHelpText>API Name of field that store Email(Optional).</inlineHelpText>
        <label>Email Field API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Full_Name_Field_API_Name__c</fullName>
        <inlineHelpText>Field API Name of full Name</inlineHelpText>
        <label>Full Name Field API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Phone_Field_API_Name__c</fullName>
        <inlineHelpText>API Name of field that store Phone Number</inlineHelpText>
        <label>Phone Field API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Postal_Code_Field_API_Name__c</fullName>
        <inlineHelpText>API Name of field that store postal code</inlineHelpText>
        <label>Postal Code Field API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Search_Results_Name_Field__c</fullName>
        <inlineHelpText>API Name of field that will be listed while searching recipients.For example; Name</inlineHelpText>
        <label>Search Results Name Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Shipment_Parent_RelationShip_Field__c</fullName>
        <inlineHelpText>API Name of Custom field created on Shipment Object</inlineHelpText>
        <label>Shipment Parent RelationShip Field</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__State_Field_API_Name__c</fullName>
        <inlineHelpText>API Name of field that store State</inlineHelpText>
        <label>State Field API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Street_Field_API_Name__c</fullName>
        <inlineHelpText>API Name of field that store Street Address</inlineHelpText>
        <label>Street Field API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Recipient Address DataSource</label>
    <pluralLabel>Recipient Address DataSources</pluralLabel>
</CustomObject>